Update naming conventions

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     </title>
 </head>
 <body>
-    <div class="frame">
+    <div class="panel">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="my-page-header">Serena Koivurinta</h1>
-                    <p class="frame">serena.koivurinta@gmail.com</p>
-                    <p class="frame">+44 (0) 7920 207 741</p>
-                    <a class="frame" href=linkedin.com/in/serena-koivurinta-824a7038>LinkedIn</a>
+                    <h1 class="cv-header">Serena Koivurinta</h1>
+                    <p class="panel">serena.koivurinta@gmail.com</p>
+                    <p class="panel">+44 (0) 7920 207 741</p>
+                    <a class="panel" href=linkedin.com/in/serena-koivurinta-824a7038>LinkedIn</a>
                 </div>
             </div>
         </div>
@@ -138,25 +138,25 @@
             </div>
         </div>
     </div>
-    <div class="frame">
+    <div class="panel">
         <div class="container">
-            <h2 class="frame-header">SKILLS</h2>
+            <h2 class="panel-h2">SKILLS</h2>
                 <div class="row">
                     <div class="col-md-3">
-                        <h3 class="frame-header3">Product management</h3>
-                        <p class="frame">Business analysis; Solution development</p>
+                        <h3 class="panel-h3">Product management</h3>
+                        <p class="panel">Business analysis; Solution development</p>
                     </div>
                     <div class="col-md-3">
-                        <h3 class="frame-header3">Agile approaches</h3>
-                        <p class="frame">Scrum; Kanban; XP</p>
+                        <h3 class="panel-h3">Agile approaches</h3>
+                        <p class="panel">Scrum; Kanban; XP</p>
                     </div>
                     <div class="col-md-3">
-                        <h3 class="frame-header3">Ways of working</h3>
-                        <p class="frame">BDD; User stories; Acceptance criteria</p>
+                        <h3 class="panel-h3">Ways of working</h3>
+                        <p class="panel">BDD; User stories; Acceptance criteria</p>
                     </div>
                     <div class="col-md-3">
-                        <h3 class="frame-header3">Tools</h3>
-                        <p class="frame">Jira/Confluence; Sketch; Actionable Agile</p>
+                        <h3 class="panel-h3">Tools</h3>
+                        <p class="panel">Jira/Confluence; Sketch; Actionable Agile</p>
                     </div>
                 </div>
         </div>
