--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <h1 class="cv-header">Serena Koivurinta</h1>
                     <p class="panel">serena.koivurinta@gmail.com</p>
                     <p class="panel">+44 (0) 7920 207 741</p>
-                    <a class="panel" href=linkedin.com/in/serena-koivurinta-824a7038>LinkedIn</a>
+                    <a class="panel" href=https://www.linkedin.com/in/serena-koivurinta-824a7038 target="_blank">LinkedIn</a>
                 </div>
             </div>
         </div>
@@ -36,9 +36,9 @@
                             <li><span class="bold">Business analyst</span> responsible for inception & launch of various products, including:</li>
                         </ul>
                         <ol>
-                            <li><a href=zurich.co.uk/health-check-tool/introduction>Health Check Tool:</a> a health check style questionnaire with personalised results and next steps to consider</li>
-                            <li><a href=zurich.co.uk/magazine>Magazine:</a> a content managed product incorporating relevant articles and personalisation for authenticated users</li>
-                            <li><a href=zurich.co.uk/investment-tool/projection>Projection Tool:</a> a tool to project the potential impact of investing in the stock market</li>
+                            <li><a href=https://www.zurich.co.uk/health-check-tool/introduction target="_blank">Health Check Tool:</a> a health check style questionnaire with personalised results and next steps to consider</li>
+                            <li><a href=https://www.zurich.co.uk/magazine target="_blank">Magazine:</a> a content managed product incorporating relevant articles and personalisation for authenticated users</li>
+                            <li><a href=https://www.zurich.co.uk/investment-tool/projection target="_blank">Projection Tool:</a> a tool to project the potential impact of investing in the stock market</li>
                         </ol>
                         <ul>
                             <li><span class="bold">Junior delivery lead</span> for a Sitecore (content management system) implementation</li>
@@ -68,8 +68,8 @@
                         </ul>
                         <p>In the press:</p>
                         <ol>
-                            <li><a href=kaivonporaus.com/sv/?portfolio=fd-sjobevakningsstationen-fagerholm>Eco friendly heating</a></li>
-                            <li><a href=gamla.abounderrattelser.fi/news/2016/09/hemlighetsfull-o-glantar-pa-dorren.html>Fagerholm Island</a></li>
+                            <li><a href=https://www.kaivonporaus.com/sv/?portfolio=fd-sjobevakningsstationen-fagerholm target="_blank">Eco friendly heating</a></li>
+                            <li><a href=https://www.gamla.abounderrattelser.fi/news/2016/09/hemlighetsfull-o-glantar-pa-dorren.html target="_blank">Fagerholm Island</a></li>
                         </ol>
                     </div>
             </div>
