Increase font sizes & add js

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     </title>
 </head>
 <body>
-    <div class="panel">
+    <div class="panel" id="top-panel">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <h1 class="cv-header">Serena Koivurinta</h1>
-                    <p class="panel">serena.koivurinta@gmail.com</p>
-                    <p class="panel">+44 (0) 7920 207 741</p>
+                    <a class="panel" href="mailto: serena.koivurinta@gmail.com">serena.koivurinta@gmail.com</a>
+                    <p id="my-tel"><span class="panel" id="num">+44 (0) 7920 207 741</span></p>
                     <a class="panel" href=https://www.linkedin.com/in/serena-koivurinta-824a7038 target="_blank">LinkedIn</a>
                 </div>
             </div>
@@ -160,6 +160,7 @@
                     </div>
                 </div>
         </div>
-    </div>    
+    </div>  
+    <script type="text/javascript" src="js/phone-number.js"></script>  
 </body>
 </html>
